fixing buttons invisible bug

--- a/frontend/style/app/manage.css
+++ b/frontend/style/app/manage.css
@@ -13,7 +13,7 @@
     margin-left: 33%;
 }
 
-.course{
+.course {
     /* just "box-shadow" it's not possible to convert to % */
     /* box-shadow: 5px 10px 18px grey; */
     border-radius: 2%/2%;
@@ -33,12 +33,14 @@
     border-radius: 9999em;
 }
 
-.courseExerciseInputEdit:focus, select.input:focus, textarea.input:focus {
+.courseExerciseInputEdit:focus,
+select.input:focus,
+textarea.input:focus {
     color: black;
     transform: scale(.993, .994);
     transition: transform .5s, opacity .25s;
     box-shadow: 1px -1px 20px #1beabd,
-                -1px 1px 20px #10abff;
+        -1px 1px 20px #10abff;
     border: 2px solid #00bfff;
 }
 
